# mantle-diver

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
assets/: credits.txt
assets/bg/: credits.txt
assets/music/: credits.txt
data/: char.ron  items.ron  recipes.ron  tiles.ron
design/: data.md  design.md  ideas.md  light.md  save.md
src/: app.rs  audio.rs  char.rs  cmdline.rs  command.rs  config.rs  crafting.rs  data.rs  debug.rs  egui_ext.rs  game.rs  graphics.rs  input.rs  inventory.rs  item.rs  itemdrop.rs  light.rs  main.rs  math.rs  player.rs  res.rs  save.rs  sfml.rs  stringfmt.rs  texture_atlas.rs  tiles.rs  time.rs  world.rs
src/app/: command.rs
src/debug/: char_db_edit.rs  console.rs  entity_list.rs  graphic_picker.rs  item_db_edit.rs  recipe_edit.rs  world_manager.rs
src/game/: events.rs  rendering.rs  systems.rs  ui.rs
src/game/rendering/: debug.rs  game.rs  ui.rs
src/game/systems/: pause_menu.rs
src/tiles/: tiledb_edit_ui.rs
src/world/: gen.rs  reg_chunk_existence.rs  serialization.rs
