[package]
name = "mantle-diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fnv = "1.0.7"
hecs = { version = "0.10.3", features = ["macros"] }
num-traits = "0.2.16"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.183", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.5"
zstd = "0.13.2"
clap = { version = "4.3.22", default-features = false, features = [
    "std",
    "help",
    "derive",
] }
directories = "5.0.1"
walkdir = "2.3.3"
ron = "0.8.1"
simdnoise = "3.1.6"
splitty = "1.0.1"
rodio = "0.19"
extension-traits = "2.0.0"
smart-default = "0.7.1"

[dependencies.s2dc]
git = "https://github.com/crumblingstatue/s2dc.git"
features = ["serde"]

[dependencies.sfml-xt]
version = "0.1.0"

[dependencies.gamedebug_core]
git = "https://github.com/crumblingstatue/gamedebug_core.git"

[dependencies.sfml]
version = "0.23.0"
default-features = false
features = ["graphics"]

[dependencies.egui-sfml]
version = "0.6.0"

[dependencies.stampcollect-sfml]
git = "https://github.com/crumblingstatue/stampcollect.git"

[dependencies.mdv-data]
path = "packages/mdv-data"

[build-dependencies.mdv-data]
path = "packages/mdv-data"

[dependencies.mdv-math]
path = "packages/mdv-math"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = ["packages/mdv-data", "packages/mdv-math"]
